--- a/src/assets/styles/common/style.scss
+++ b/src/assets/styles/common/style.scss
@@ -1,5 +1,5 @@
 // loader
-.loader{
+.loader {
     position: fixed;
     z-index: 999;
     top: 0;
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    &::after{
+
+    &::after {
         content: '';
         width: 100px;
         height: 100px;
@@ -20,11 +21,13 @@
         animation: infinite .5s linear loader;
     }
 }
-@keyframes loader{
-    0%{
+
+@keyframes loader {
+    0% {
         transform: rotate(0);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
@@ -117,29 +120,34 @@
     }
 }
 
-.categories{
+.categories {
     display: flex;
     column-gap: 60px;
     // justify-content: space-between;
     height: 100%;
-    &__title{
+
+    &__title {
         display: block;
     }
-    &__name-list{
-        list-style:circle;
+
+    &__name-list {
+        list-style: circle;
         display: block;
 
     }
-    &__item-content{
+
+    &__item-content {
         display: block;
         display: block;
     }
-    &__item-name{
-        list-style:circle;
+
+    &__item-name {
+        list-style: circle;
         display: block;
     }
 }
-.swiper{
+
+.swiper {
     display: block;
 }
 
@@ -150,32 +158,90 @@
     height: 30px;
     padding: 4px;
     height: 200px;
-    &__img{
+
+    &__img {
         width: 100px;
     }
+
     &__item {
         height: 200px;
-        border: 1px solid #00000088;
+        // border: 1px solid #00000088;
         color: #ffffff88;
         border-radius: 4px;
         display: flex;
         align-items: center;
         justify-content: center;
 
-        background: #000;
+        background: #131313;
         text-align: center;
         cursor: pointer;
     }
 
-    
+
 }
-.category{
+
+.category {
     display: flex;
-    &__item{
-        padding:10px;
+
+    &__item {
+        padding: 10px;
         background: #696969;
         border-radius: 5px;
         text-align: center;
 
+    }
+}
+.top-rate{
+    padding-top: 20px
+}
+.product {
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    &__content {
+        max-width: 250px;
+        width: 100%;
+        height: 400px;
+        border: 1px solid red;
+        padding: 4px;
+        flex-wrap: wrap;  
+        
+    }
+    &__content-img{
+        display: block;
+        
+        width: 100%;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__img {
+        width: 100px;
+
+    }
+    &__price{
+        padding: 4px 10px ;
+    }
+    &__star{
+        padding: 4px 10px ;
+    }
+    &__get-btn{
+        width: 100%;
+        border-radius: 4px;
+        padding: 10px 10px ;
+        background: transparent;
+        border: 2px solid #b6b7fd;
+        color: #b6b7fd;
+    }
+    &__get-btn:focus{
+        width: 100%;
+        border-radius: 4px;
+        padding: 10px 10px ;
+        background: #b6b7fd;
+        color: #fff;
     }
 }
